--- a/web/asteroids.html
+++ b/web/asteroids.html
@@ -90,9 +90,9 @@
       <progress value="0" max="100" id="progress" hidden=1></progress>
     </div>
     <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()"></canvas>
-    <div id="controls">
+    <!-- <div id="controls">
       <input type="button" value="Fullscreen" onclick="Module.requestFullscreen(true, false)"/>
-    </span>
+    </span> -->
 
     <script type='text/javascript'>
       var statusElement = document.getElementById('status');
