--- a/web/asteroids.html
+++ b/web/asteroids.html
@@ -1,174 +1,199 @@
 <!doctype html>
 <html lang="en-us">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Asteroids</title>
-    <style>
-      body {
-        background: #333;
-        font-family: arial;
-        margin: 0;
-        padding: none;
-      }
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <title>Asteroids</title>
+  <style>
+    html {
+      height: 100%;
+    }
 
-      body > div,
-      body > div:-webkit-full-screen {
-        background: black;
-      }
+    body {
+      background: #333;
+      font-family: arial;
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
 
-      .emscripten {
-        padding-right: 0;
-        margin-left: auto;
-        margin-right: auto;
-        display: block;
-      }
+    .emscripten {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      padding-right: 0;
+    }
 
-      div.emscripten {
-        text-align: center;
-      }
+    div.emscripten {
+      text-align: center;
+    }
 
-      /* the canvas *must not* have any border or padding, or mouse coords will be wrong */
-      canvas.emscripten {
-        border: 0px none;
-        background-color: #333;
-        border-top-left-radius: 1.5% 2%;
-        border-top-right-radius: 1.5% 2%;
-        border-bottom-left-radius: 1.5% 2%;
-        border-bottom-right-radius: 1.5% 2%;
-      }
+    /* the canvas *must not* have any border or padding, or mouse coords will be wrong */
+    canvas.emscripten {
+      background-color: #333;
+      border: 0px none;
+      height: 100%;
+      width: 100%;
+    }
 
-      #emscripten_logo {
-        display: inline-block;
-        margin: 0;
-      }
+    @-webkit-keyframes rotation {
+      from {-webkit-transform: rotate(0deg);}
+      to {-webkit-transform: rotate(360deg);}
+    }
+    @-moz-keyframes rotation {
+      from {-moz-transform: rotate(0deg);}
+      to {-moz-transform: rotate(360deg);}
+    }
+    @-o-keyframes rotation {
+      from {-o-transform: rotate(0deg);}
+      to {-o-transform: rotate(360deg);}
+    }
+    @keyframes rotation {
+      from {transform: rotate(0deg);}
+      to {transform: rotate(360deg);}
+    }
 
-      @-webkit-keyframes rotation {
-        from {-webkit-transform: rotate(0deg);}
-        to {-webkit-transform: rotate(360deg);}
-      }
-      @-moz-keyframes rotation {
-        from {-moz-transform: rotate(0deg);}
-        to {-moz-transform: rotate(360deg);}
-      }
-      @-o-keyframes rotation {
-        from {-o-transform: rotate(0deg);}
-        to {-o-transform: rotate(360deg);}
-      }
-      @keyframes rotation {
-        from {transform: rotate(0deg);}
-        to {transform: rotate(360deg);}
-      }
+    #status {
+      color: white;
+      font-weight: bold;
+      margin: 45px auto;
+      position: fixed;
+      vertical-align: top;
+      width: 100%;
+    }
 
-      #status {
-        display: inline-block;
-        vertical-align: top;
-        margin-top: 30px;
-        margin-left: 20px;
-        font-weight: bold;
-        color: rgb(120, 120, 120);
-      }
+    #progress {
+      height: 20px;
+      width: 30px;
+    }
 
-      #progress {
-        height: 20px;
-        width: 30px;
-      }
+    #controls {
+      background: none;
+      display: block;
+      margin-top: 30px;
+      margin-left: auto;
+      margin-right: auto;
+      text-align: center;
+    }
+  </style>
+</head>
+<body>
+  <div class="emscripten" id="status">Downloading...</div>
+  <div class="emscripten">
+    <progress value="0" max="100" id="progress" hidden=1></progress>
+  </div>
+  <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()"></canvas>
+  <script type='text/javascript'>
+    const statusElement = document.getElementById('status');
+    const progressElement = document.getElementById('progress');
+    var Module = {
+      preRun: [],
+      postRun: [],
 
-      #controls {
-        background: none;
-        display: block;
-        margin-top: 30px;
-        margin-left: auto;
-        margin-right: auto;
-        text-align: center;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="emscripten" id="status">Downloading...</div>
-    <div class="emscripten">
-      <progress value="0" max="100" id="progress" hidden=1></progress>
-    </div>
-    <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()"></canvas>
-    <!-- <div id="controls">
-      <input type="button" value="Fullscreen" onclick="Module.requestFullscreen(true, false)"/>
-    </span> -->
+      print: (function() {
+        const element = document.getElementById('output');
+        if (element) {
+          element.value = ''; // clear browser cache
+        }
 
-    <script type='text/javascript'>
-      var statusElement = document.getElementById('status');
-      var progressElement = document.getElementById('progress');
-
-      var Module = {
-        preRun: [],
-        postRun: [],
-        print: (function() {
-          var element = document.getElementById('output');
-          if (element) element.value = ''; // clear browser cache
-          return function(text) {
-            if (arguments.length > 1) text = Array.prototype.slice.call(arguments).join(' ');
-            // These replacements are necessary if you render to raw HTML
-            //text = text.replace(/&/g, "&amp;");
-            //text = text.replace(/</g, "&lt;");
-            //text = text.replace(/>/g, "&gt;");
-            //text = text.replace('\n', '<br>', 'g');
-            console.log(text);
-            if (element) {
-              element.value += text + "\n";
-              element.scrollTop = element.scrollHeight; // focus on bottom
-            }
-          };
-        })(),
-        printErr: function(text) {
-          if (arguments.length > 1) text = Array.prototype.slice.call(arguments).join(' ');
-          if (0) { // XXX disabled for safety typeof dump == 'function') {
-            dump(text + '\n'); // fast, straight to the real console
-          } else {
-            console.error(text);
+        return function(text) {
+          if (arguments.length > 1) {
+            text = Array.prototype.slice.call(arguments).join(' ');
           }
-        },
-        canvas: (function() {
-          var canvas = document.getElementById('canvas');
 
-          // As a default initial behavior, pop up an alert when webgl context is lost. To make your
-          // application robust, you may want to override this behavior before shipping!
-          // See http://www.khronos.org/registry/webgl/specs/latest/1.0/#5.15.2
-          canvas.addEventListener("webglcontextlost", function(e) { alert('WebGL context lost. You will need to reload the page.'); e.preventDefault(); }, false);
+          console.log(text);
 
-          return canvas;
-        })(),
-        setStatus: function(text) {
-          if (!Module.setStatus.last) Module.setStatus.last = { time: Date.now(), text: '' };
-          if (text === Module.setStatus.text) return;
-          var m = text.match(/([^(]+)\((\d+(\.\d+)?)\/(\d+)\)/);
-          var now = Date.now();
-          if (m && now - Date.now() < 30) return; // if this is a progress update, skip it if too soon
-          if (m) {
-            text = m[1];
-            progressElement.value = parseInt(m[2])*100;
-            progressElement.max = parseInt(m[4])*100;
-            progressElement.hidden = false;
-          } else {
-            progressElement.value = null;
-            progressElement.max = null;
-            progressElement.hidden = true;
+          if (element) {
+            element.value += text + "\n";
+            element.scrollTop = element.scrollHeight; // focus on bottom
           }
-          statusElement.innerHTML = text;
-        },
-        totalDependencies: 0,
-        monitorRunDependencies: function(left) {
-          this.totalDependencies = Math.max(this.totalDependencies, left);
-          Module.setStatus(left ? 'Preparing... (' + (this.totalDependencies-left) + '/' + this.totalDependencies + ')' : 'All downloads complete.');
+        };
+      })(),
+
+      printErr: function(text) {
+        if (arguments.length > 1) {
+          text = Array.prototype.slice.call(arguments).join(' ');
+        }
+
+        console.error(text);
+      },
+
+      canvas: (function() {
+        const canvas = document.getElementById('canvas');
+
+        // As a default initial behavior, pop up an alert when webgl context is lost. To make your
+        // application robust, you may want to override this behavior before shipping!
+        // See http://www.khronos.org/registry/webgl/specs/latest/1.0/#5.15.2
+        canvas.addEventListener("webglcontextlost", function(e) {
+          alert('WebGL context lost. You will need to reload the page.');
+          e.preventDefault();
+        }, false);
+
+        return canvas;
+      })(),
+
+      setStatus: function(text) {
+        if (!Module.setStatus.last) {
+          Module.setStatus.last = {
+            time: Date.now(),
+            text: ''
+          }
+        };
+
+        if (text === Module.setStatus.text) {
+          return;
+        }
+
+        const m = text.match(/([^(]+)\((\d+(\.\d+)?)\/(\d+)\)/);
+        const now = Date.now();
+        if (m && now - Date.now() < 30) {
+          return; // if this is a progress update, skip it if too soon
+        }
+
+        if (m) {
+          text = m[1];
+          progressElement.value = parseInt(m[2]) * 100;
+          progressElement.max = parseInt(m[4]) * 100;
+          progressElement.hidden = false;
+        } else {
+          progressElement.value = null;
+          progressElement.max = null;
+          progressElement.hidden = true;
+        }
+        statusElement.innerHTML = text;
+      },
+
+      totalDependencies: 0,
+
+      monitorRunDependencies: function(left) {
+        this.totalDependencies = Math.max(this.totalDependencies, left);
+        if (left) {
+          Module.setStatus('Preparing... (' + (this.totalDependencies-left) + '/' + this.totalDependencies + ')');
+        } else {
+          Module.setStatus('All downloads complete.');
+        }
+      }
+    };
+
+    Module.setStatus('Downloading...');
+
+    window.onerror = function(event) {
+      // TODO: do not warn on ok events like simulating an infinite loop or exitStatus
+      Module.setStatus('Exception thrown, see JavaScript console');
+      Module.setStatus = function(text) {
+        if (text) {
+          Module.printErr('[post-exception status] ' + text);
         }
       };
-      Module.setStatus('Downloading...');
-      window.onerror = function(event) {
-        // TODO: do not warn on ok events like simulating an infinite loop or exitStatus
-        Module.setStatus('Exception thrown, see JavaScript console');
-        Module.setStatus = function(text) {
-          if (text) Module.printErr('[post-exception status] ' + text);
-        };
-      };
-    </script>
-    <script async type="text/javascript" src="asteroids.js"></script>
-  </body>
+    };
+
+    window.onresize = function() {
+      const canvas = document.getElementById('canvas');
+      canvas.style = 'height: 100%; wdith: 100%';
+    }
+
+    window.onresize();
+  </script>
+  <script async type="text/javascript" src="asteroids.js"></script>
+</body>
 </html>
